--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,9 @@
 
 body { font-family: sans-serif; }
 
-.carousel { background: #EEE; width: 100%; height: 50%; }
+.carousel { background: #EEE; width: 100%; }
 
-.carousel-cell { width: 100%; height: 50vh; margin-right: 10px; background: #8C8; border-radius: 5px; counter-increment: carousel-cell; background-size: cover; background-position: center; }
-
-/* cell number */
-.carousel-cell:before { display: block; text-align: center; content: counter(carousel-cell); line-height: 200px; font-size: 80px; color: white; }
+.carousel-cell { width: 100%; margin-right: 10px; background: #8C8; border-radius: 5px; counter-increment: carousel-cell; background-size: cover; background-position: center; }
 
 .container { max-width: 1200px; margin: 0 auto; text-align: center; text-shadow: 2px 2px black; color: white; font-size: 24px; }
 
