--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,5 @@ body { font-family: sans-serif; }
 .wrapper { position: relative; }
 
 .progress-bar { height: 20px; width: 0; background: #333; }
+
+#map { height: 200px; width: 100%; }
